# MyDjango

./: .gitignore  Dockerfile
my_django/: pyproject.toml
my_django/django_project/blog/: admin.py  models.py
my_django/django_project/blog/migrations/: 0001_initial.py  0002_article_content2_alter_article_content.py  0003_article_content3.py
my_django/django_project/django_project/: settings.py  urls.py
my_django/my_django/: settings.py
